ingress/nginx/marvel-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marvel-home
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: marvel
  template:
    metadata: 
      labels:
        name: marvel
    spec:
      containers:
      - name: marvel-container
        image: smlinux/marvel-collection
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: marvel-service
spec:
  selector:
    name: marvel
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80
